--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
     </div>
    </section>
    <button class="switch-btn">
-     <span>Light</span>
-     <span>Dark</span>
-     <span class="switch"></span>
+     <span>Light</span><span>Dark</span><span class="switch"></span>
    </button>
  <script type="js" src="index.js"></script>
 </body>
