--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
          <h1>Supervisor</h1>
           <p>Monitors activity to identify project roadblocks
             </p>
-          <img src="../images/icon-supervisor.svg" alt="" class="supervisor-img"/>
+          <img src="/images/icon-supervisor.svg" alt="" class="supervisor-img"/>
       </article>
       </div>
 
@@ -44,7 +44,7 @@
       <article class="team-builder theme">
         <h1>Team Builder</h1>
         <p>Scans our talent network to create the optimal team for your project</p>
-          <img src="../images/icon-team-builder.svg" alt="" class="team-builder-img" />
+          <img src="/images/icon-team-builder.svg" alt="" class="team-builder-img" />
       </article>
       </div>
 
@@ -52,7 +52,7 @@
       <article class="karma theme">
         <h1>Karma</h1>
         <p>Regularly evaluates our talent to ensure quality</p>
-          <img src="../images/icon-karma.svg" alt="" class="karma-img" />
+          <img src="/images/icon-karma.svg" alt="" class="karma-img" />
       </article>
       </div>
     </div>
@@ -61,7 +61,7 @@
       <article class="calculator theme">
         <h1>Calculator</h1>
         <p>Uses data from past projects to provide better delivery estimates</p>
-          <img src="../images/icon-calculator.svg" alt="" class="calculator-img" />
+          <img src="/images/icon-calculator.svg" alt="" class="calculator-img" />
       </article>
     </div>
    </section>
