--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style> -->
 </head>
-<body class="light">
+<body>
 
   <header>
   <p>Reliable, efficient delivery</p>
@@ -30,8 +30,8 @@
   
    <section class="main">
 
-      <div class="supervisorC c-theme">
-      <article class="supervisor theme">
+      <div class="supervisorC themeC">
+      <article class="supervisor">
          <h1>Supervisor</h1>
           <p>Monitors activity to identify project roadblocks
             </p>
@@ -40,16 +40,16 @@
       </div>
 
       <div class="container-md">
-      <div class="team-builderC c-theme">
-      <article class="team-builder theme">
+      <div class="team-builderC themeC">
+      <article class="team-builder">
         <h1>Team Builder</h1>
         <p>Scans our talent network to create the optimal team for your project</p>
           <img src="images/icon-team-builder.svg" alt="" class="team-builder-img" />
       </article>
       </div>
 
-     <div class="karmaC c-theme">
-      <article class="karma theme">
+     <div class="karmaC themeC">
+      <article class="karma">
         <h1>Karma</h1>
         <p>Regularly evaluates our talent to ensure quality</p>
           <img src="images/icon-karma.svg" alt="" class="karma-img" />
@@ -57,8 +57,8 @@
       </div>
     </div>
      
-    <div class="calculatorC c-theme">
-      <article class="calculator theme">
+    <div class="calculatorC themeC">
+      <article class="calculator">
         <h1>Calculator</h1>
         <p>Uses data from past projects to provide better delivery estimates</p>
           <img src="images/icon-calculator.svg" alt="" class="calculator-img" />
@@ -66,8 +66,10 @@
     </div>
    </section>
    <button class="switch-btn">
-     <span>Light</span><span>Dark</span><span class="switch"></span>
+     <span>Light</span>
+     <span>Dark</span>
+     <span class="switch"></span>
    </button>
- <script type="js" src="index.js"></script>
+ <script src="index.js"></script>
 </body>
 </html>
